feat(alert-service): add Rest endpoints for high and critical alerts
